update footer with the author's name

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -30,7 +30,7 @@
             </div>
           </div>
           <div class="mt-8 text-sm text-center">
-            <p>&copy; {{ currentYear }} Your Name. All rights reserved.</p>
+            <p>&copy; {{ currentYear }} Made by the <a href="https://github.com/StoicBug" target="_blank">StoicBug</a>. All rights reserved.</p>
           </div>
         </div>
       </footer>
